C-AgVeGuvenlik/08-NetworkPolicy/allow-from-frontend-app-only.yaml
# allow-from-frontend-app-only.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-frontend-app-only
  namespace: sekom-np-backend
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              team: frontend
          podSelector:
            matchLabels:
              role: api-client   # frontend namespace İÇİNDE sadece bu label'lı pod'lar
      ports:
        - protocol: TCP
          port: 8080
