C-AgVeGuvenlik/08-NetworkPolicy/allow-from-frontend-namespace.yaml
# allow-from-frontend-namespace.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-frontend-namespace
  namespace: sekom-np-backend
spec:
  podSelector: {}
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              team: frontend
      ports:
        - protocol: TCP
          port: 8080
